Fix gradle setup to run tests successfully for Java 15